--- a/index.html
+++ b/index.html
@@ -1,11 +1,32 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Responsive School Day</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>School Day Schedule</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
 </head>
+
 <body>
-    
+    <div class="container">
+        <h1> My School Day</h1>
+        <div class="row">
+            <div class="col">
+                <img class="img-fluid" src="https://placehold.co/600x400?text=Morning\nClasses"
+                    alt="Morning Classes"><p>History, Web Design, Algebra I</p></div>
+            <div class="col d-none d-lg-block">
+                <img class="img-fluid" src="https://placehold.co/600x400?text=Lunch" alt="Lunch"><p>Cafeteria</p></div>
+            <div class="col"> 
+                <img class="img-fluid" src="https://placehold.co/600x400?text=Afternoon\nClasses"
+                    alt="Afternoon Classes"><p>Chemistry, English</p>
+            </div>
+        </div>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
