--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
     <div class="container">
         <h1> My School Day</h1>
         <div class="row">
-            <div class="col">
+            <div class="col d-block">
                 <img class="img-fluid" src="https://placehold.co/600x400?text=Morning\nClasses"
                     alt="Morning Classes"><p>History, Web Design, Algebra I</p></div>
-            <div class="col d-none d-lg-block">
+            <div class="col d-none d-lg-block ">
                 <img class="img-fluid" src="https://placehold.co/600x400?text=Lunch" alt="Lunch"><p>Cafeteria</p></div>
-            <div class="col"> 
+            <div class="col d-block"> 
                 <img class="img-fluid" src="https://placehold.co/600x400?text=Afternoon\nClasses"
                     alt="Afternoon Classes"><p>Chemistry, English</p>
             </div>
