--- a/index.html
+++ b/index.html
@@ -7,20 +7,36 @@
     <title>School Day Schedule</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
     <div class="container">
         <h1> My School Day</h1>
         <div class="row">
-            <div class="col d-block">
-                <img class="img-fluid" src="https://placehold.co/600x400?text=Morning\nClasses"
-                    alt="Morning Classes"><p>History, Web Design, Algebra I</p></div>
-            <div class="col d-none d-lg-block ">
-                <img class="img-fluid" src="https://placehold.co/600x400?text=Lunch" alt="Lunch"><p>Cafeteria</p></div>
-            <div class="col d-block"> 
+            <div class="col-sm-12 col-md-6 col-lg-4 ">
+                <img class="img-fluid" src="https://placehold.co/600x400?text=Morning\nClasses" alt="Morning Classes">
+                <div class="md-visible ">
+                    <p>History, Web Design, Algebra I</p>
+                </div>
+
+            </div>
+            <div class="d-none d-lg-block col-lg-4 ">
+                <img class="img-fluid" src="https://placehold.co/600x400?text=Lunch" alt="Lunch">
+                <div class="invisible ">
+                    <p>Cafeteria</p>
+                </div>
+
+            </div>
+            <div class="col-sm-12 col-md-6 col-lg-4">
                 <img class="img-fluid" src="https://placehold.co/600x400?text=Afternoon\nClasses"
-                    alt="Afternoon Classes"><p>Chemistry, English</p>
+                    alt="Afternoon Classes">
+                <div class="md-visible
+                 ">
+                    <p>Chemistry, English</p>
+                </div>
+
+
             </div>
         </div>
     </div>
